# reemc_hri_interaction

./: README.md
fusion/: CMakeLists.txt  package.xml  setup.py
fusion/action/: test_msg.action
fusion/launch/: 2nd_fusion.launch  debug.launch  face_detector.launch  fusion.launch  nao_driver.launch  reco.launch  sound_loc.launch  track.launch
fusion/src/: 12.cpp  Localization1.txt  backup.cpp  cam.cpp  cam222.cpp  client.cpp  debug (copy).cpp  debug.cpp  debug_2.cpp  debug_track.cpp  fusion.cpp  fusion_BACKUP.cpp  fusion_backup2.cpp  fusion_backup_3.cpp  k.py
fusion/src/backup/: debug_track (another copy).cpp  demoOnline2.n  publisher.py
interact/: CMakeLists.txt  manifest.xml  package.xml  setup.py
interact/scripts/: counter.py  gspeech.py  robot_interface.py
interact/src/: AIbot.py  gspeech.py  gspeech_backup.py  responder_backup.py
interaction_nodes/: CMakeLists.txt  package.xml  setup.py
interaction_nodes/src/: speech_action.py
pal_face_detector_opencv/: CMakeLists.txt  package.xml
pal_face_detector_opencv/config/: inputs.csv
pal_face_detector_opencv/config/orl_faces/s42/: 1.pgm  10.pgm  13.pgm  18.pgm  20.pgm  3.pgm  4.pgm  5.pgm  8.pgm  9.pgm
pal_face_detector_opencv/launch/: my 2.launch  my.launch  recognize.launch
pal_face_detector_opencv/src/: Recognizer.cpp  Recognizer.h  face_detector_with_reco.cpp  recognize.cpp  sub.cpp  track.cpp  track_to_tpl_match.cpp
particle_tracker/: CMakeLists.txt  package.xml
particle_tracker/config/: inputs.csv
particle_tracker/config/orl_faces/s42/: 11.pgm  12.pgm  14.pgm  15.pgm  16.pgm  17.pgm  19.pgm  2.pgm  6.pgm  7.pgm
particle_tracker/config/orl_faces/s43/: 1.pgm  10.pgm  11.pgm  12.pgm  13.pgm  14.pgm  15.pgm  16.pgm  17.pgm  18.pgm  19.pgm  2.pgm  20.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
particle_tracker/config/orl_faces/s44/: 1.pgm  10.pgm  11.pgm  12.pgm  13.pgm  14.pgm  15.pgm  16.pgm  17.pgm  18.pgm  19.pgm  2.pgm  20.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
particle_tracker/config/orl_faces/s45/: 1.pgm  10.pgm  11.pgm  12.pgm  13.pgm  14.pgm  15.pgm  16.pgm  17.pgm  18.pgm  19.pgm  2.pgm  20.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
particle_tracker/doc/html/: .buildinfo  objects.inv  searchindex.js  user_manual.html
particle_tracker/doc/html/_html/: about.html  how_it_works.html  install.html  use.html
particle_tracker/doc/html/_sources/: user_manual.txt
particle_tracker/doc/html/_sources/_html/: about.txt  how_it_works.txt  install.txt  use.txt
particle_tracker/launch/: debug_tracker.launch  tracker.launch
particle_tracker/src/: Recognizer.cpp  Recognizer.h  backup_main.cpp  main.cpp  particle.cpp  recognize.cpp  tracker.cpp
reem_tutorials/: CMakeLists.txt
reem_tutorials/src/: look_to_point.cpp  my_controler.cpp
