<?xml version="1.0"?>
<package>
  <name>fusion</name>
  <version>0.0.0</version>
  <description>The fusion package</description>
  <maintainer email="omar-sinan@hotmail.com">pal</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>pal_interaction_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nao_msgs</build_depend>
  <build_depend> pcl_ros </build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>nao_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend> actionlib_msgs</build_depend>


  <run_depend>cv_bridge</run_depend>
  <run_depend>pal_detection_msgs</run_depend>
  <run_depend>pal_interaction_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nao_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend> pcl_ros </run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>nao_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend> actionlib_msgs</run_depend>
  <export>
  </export>
</package>
