<?xml version="1.0"?>
<package>
  <name>interaction_nodes</name>
  <version>0.0.0</version>
  <description>The interaction_nodes package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  

  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend> std_msgs</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>nao_msgs</build_depend>
  <build_depend> actionlib_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend> std_msgs</run_depend>
  <run_depend>pal_detection_msgs</run_depend>
  <run_depend>nao_msgs</run_depend>
  <run_depend> actionlib_msgs</run_depend>
</package>
