<?xml version="1.0"?>
<package>
  <name>particle_tracker</name>
  <version>0.0.0</version>
  <description>The particle_tracker package</description>
  <maintainer email="omar-sinan@hotmail.com">omar sinan</maintainer>
  
  <license>LGPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend> actionlib_msgs</build_depend>
  <build_depend> pcl_conversions</build_depend>
  <build_depend> pcl_ros</build_depend>
  <build_depend> fusion</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pal_detection_msgs</run_depend>
  <run_depend> std_msgs</run_depend>
  <run_depend>pal_detection_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend> actionlib_msgs</run_depend>
  <run_depend> fusion</run_depend>
  <run_depend> pcl_conversions</run_depend>
  <run_depend> pcl_ros</run_depend>

</package>
